--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <li>Maíz</li>
     </ul>
     <h2>Preparación:</h2>
+    <ol>
+        <li>Cocina la pechuga con sal y ajo y desmechala</li>
+        <li>Lava la lechuga con abundante agua y vinagre</li>
+        <li>Pica la cebolla en juliana y dejala remojando en agua con limón</li>
+        <li>Pica el tomate en cascos y deja reposando con aceite de oliva y sal</li>
+        <li>Mezcla todos los ingredientes y adereza con aceite de oliva, sal, vinagre y pimienta</li>
+    </ol>
     <p>Se pican todos los ingredientes, se mezclan y listo!</p>
 </body>
 </html>
