--- a/ejercicio1-html-y-css/index.html
+++ b/ejercicio1-html-y-css/index.html
@@ -8,6 +8,20 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <form action = "/registro" method = "post">
+        <h2>Login</h2>
+        <label>Email<input type="email" name="email" class = "email"/></label>
+        <br></br>
+         <label for = "password">Password</label>
+          <input type = "password" name = "password" id = "password" value = "Incorrecto" size = "8"/>
+        <br></br>
+        <label>Género<select name = "genero">
+        <option value = "" disable selected>Selecciona un género</option>
+        <option value = "hombre">Hombre</option>
+        <option value = "mujer">Mujer</option></select></label>
+        <br></br>
+         <label><input type="checkbox" name = "acepto los terminos" class = "caja"/>Acepto los términos</label>
+         <input type="submit" value = "Ingresar" class = "ingresar"/>
+    </form>
 </body>
 </html>
